--- a/package.json
+++ b/package.json
@@ -18,5 +18,12 @@
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
     "typescript": "^4.6.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "eslint": "^8.14.0",
+    "eslint-plugin-react": "^7.29.4",
+    "ts-node": "^10.7.0"
   }
 }
