--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "skipLibCheck": false,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "ESNext",
+    "module": "CommonJS",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "allowJs": false,
@@ -13,6 +13,7 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "jsx": "react-jsx",
+    "outDir": "dist",
   },
   "include": ["src"],
 }
