--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,8 @@
         "quotes": ["warn", "single"],
         "semi": ["warn", "always"],
         "prefer-const": "off",
+        "@typescript-eslint/indent": ["error", 2],
         "@typescript-eslint/no-unused-vars": ["warn", { "ignoreRestSiblings": true }],
-        "@typescript-eslint/indent": ["error", "tab"]
+        "@typescript-eslint/no-var-requires": 0
     }
 }
