--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "eslint": "^8.14.0",
