--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "outDir": "dist",
+    "noImplicitAny": true
   },
   "include": ["src"],
 }
