--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Sitio desarrollado para la cursada de Backend de Coderhouse",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --ignore data/* --exec ts-node src/app.ts"
   },
   "repository": {
     "type": "git",
@@ -17,9 +18,11 @@
   },
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
+    "express": "^4.18.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
