--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --ignore data/* --exec ts-node src/app.ts"
+    "dev": "nodemon --ignore data/* --exec ts-node src/app.ts",
+    "watch": "nodemon --ignore data/* --exec ts-node"
   },
   "repository": {
     "type": "git",
@@ -19,10 +20,12 @@
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "multer": "^1.4.4",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.30",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
