--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "express-handlebars": "^6.0.6",
     "multer": "^1.4.4",
     "typescript": "^4.6.3"
   },
