--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "multer": "^1.4.4",
+    "socket.io": "^4.5.1",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
