--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --ignore data/* --exec ts-node src/app.ts",
-    "watch": "nodemon --ignore data/* --exec ts-node"
+    "watch": "nodemon --ignore data/* --exec ts-node",
+    "watchjs": "nodemon --ignore data/* --exec node"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "multer": "^1.4.4",
