--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --ignore data/* --exec ts-node src/app.ts",
+    "preview": "ts-node src/app.ts",
     "watch": "nodemon --ignore data/* --exec ts-node",
     "watchjs": "nodemon --ignore data/* --exec node"
   },
