--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
+    "target": "ES5",
     "skipLibCheck": false,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
