--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "knex": "^2.1.0",
     "multer": "^1.4.4",
     "socket.io": "^4.5.1",
+    "sqlite3": "^5.0.8",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
