--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^6.0.6",
     "knex": "^2.1.0",
     "multer": "^1.4.4",
+    "mysql": "^2.18.1",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.8",
     "typescript": "^4.6.3",
