--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "knex": "^2.1.0",
+    "mongoose": "^6.4.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "socket.io": "^4.5.1",
