--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
+    "@firebase/firestore": "^3.4.11",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "firebase": "^9.8.4",
     "knex": "^2.1.0",
     "mongoose": "^6.4.0",
     "multer": "^1.4.4",
