--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "mongoose": "^6.4.0",
     "multer": "^1.4.4",
     "mysql": "^2.18.1",
+    "normalizr": "^3.6.2",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.8",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.3.0",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.30",
