Find now uses lean, fix everyting to work w/this

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "outDir": "dist",
-    "noImplicitAny": true
+    "noImplicitAny": true,
+    "removeComments": true
   },
-  "include": ["src"],
+  "include": ["src"]
 }
