--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
     "@firebase/firestore": "^3.4.11",
+    "connect-mongo": "^4.6.0",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
+    "express-session": "^1.17.3",
     "firebase": "^9.8.4",
     "knex": "^2.1.0",
     "mongoose": "^6.4.0",
@@ -39,6 +42,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.30",
