--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@faker-js/faker": "^7.3.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^17.0.30",
     "@types/uuid": "^8.3.4",
