--- a/package.json
+++ b/package.json
@@ -22,22 +22,22 @@
   },
   "homepage": "https://github.com/notSagyo/ch-node-site#readme",
   "dependencies": {
-    "@firebase/firestore": "^3.4.11",
+    "@firebase/firestore": "^3.4.12",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
-    "firebase": "^9.8.4",
+    "firebase": "^9.9.0",
     "knex": "^2.1.0",
-    "mongoose": "^6.4.0",
-    "multer": "^1.4.4",
+    "mongoose": "^6.4.5",
+    "multer": "1.4.5-lts.1",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
     "socket.io": "^4.5.1",
-    "sqlite3": "^5.0.8",
-    "typescript": "^4.6.3",
+    "sqlite3": "^5.0.9",
+    "typescript": "^4.7.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -46,12 +46,12 @@
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
-    "@types/node": "^17.0.30",
+    "@types/node": "^18.0.6",
     "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "eslint": "^8.14.0",
-    "eslint-plugin-react": "^7.29.4",
-    "ts-node": "^10.7.0"
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-plugin-react": "^7.30.1",
+    "ts-node": "^10.9.1"
   }
 }
