--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "multer": "1.4.5-lts.1",
     "mysql": "^2.18.1",
     "normalizr": "^3.6.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.9",
     "typescript": "^4.7.4",
@@ -49,6 +51,8 @@
     "@types/express-session": "^1.17.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.6",
+    "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
