--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@firebase/firestore": "^3.4.12",
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.1",
@@ -33,6 +34,7 @@
     "express-session": "^1.17.3",
     "firebase": "^9.9.0",
     "knex": "^2.1.0",
+    "minimist": "^1.2.6",
     "mongoose": "^6.4.5",
     "multer": "1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -47,9 +49,11 @@
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/minimist": "^1.2.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.0.6",
     "@types/passport": "^1.0.9",
