--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Sitio desarrollado para la cursada de Backend de Coderhouse",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --ignore data/* --exec ts-node src/app.ts",
-    "preview": "node dist/app.js",
+    "dev": "nodemon --exec ts-node src/app.ts",
+    "build": "tsc --build --verbose",
+    "preview": "nodemon dist/app.js",
     "start": "npm run preview",
-    "watch": "nodemon --ignore data/* --exec ts-node",
-    "watchjs": "nodemon --ignore data/* --exec node",
+    "watch": "nodemon --exec ts-node",
+    "watchjs": "nodemon --exec node",
     "test": "ts-node src/tests/tests.ts"
   },
   "repository": {
@@ -34,6 +35,7 @@
     "express-session": "^1.17.3",
     "firebase": "^9.9.0",
     "knex": "^2.1.0",
+    "log4js": "^6.6.1",
     "minimist": "^1.2.6",
     "mongoose": "^6.4.5",
     "multer": "1.4.5-lts.1",
