--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/app.ts",
     "build": "tsc --build --verbose",
-    "preview": "pm2-runtime start ecosystem.config.js --env production",
+    "preview": "pm2-runtime start ecosystem.config.js --env development",
     "start": "npm run preview",
     "watch": "nodemon --exec ts-node",
     "watchjs": "nodemon --exec node",
@@ -38,18 +38,21 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase": "^9.9.3",
+    "image-type": "4.0.0",
     "knex": "^2.2.0",
     "log4js": "^6.6.1",
     "minimist": "^1.2.6",
     "mongoose": "^6.5.3",
     "multer": "1.4.5-lts.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.8",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pm2": "^5.2.0",
     "socket.io": "^4.5.1",
     "sqlite3": "^5.0.11",
+    "twilio": "^3.81.0",
     "typescript": "^4.8.2",
     "uuid": "^8.3.2"
   },
@@ -63,6 +66,7 @@
     "@types/minimist": "^1.2.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.13",
+    "@types/nodemailer": "^6.4.5",
     "@types/passport": "^1.0.10",
     "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.4",
