--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "firebase": "^9.9.3",
     "image-type": "4.0.0",
     "knex": "^2.2.0",
+    "lodash": "^4.17.21",
     "log4js": "^6.6.1",
     "minimist": "^1.2.6",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.5.3",
     "multer": "1.4.5-lts.1",
     "mysql": "^2.18.1",
@@ -61,6 +63,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
+    "@types/lodash": "^4.14.185",
     "@types/minimist": "^1.2.2",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.13",
