--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc --build --verbose",
     "preview": "pm2-runtime start ecosystem.config.js --env development",
     "start": "npm run preview",
-    "test": "ts-node src/modules/test/test.ts",
+    "test-axios": "ts-node src/modules/test/axios.test.ts",
+    "test-mocha": "ts-mocha src/modules/test/supertest.test.ts > logs/mocha-results.log",
     "fork": "pm2 start dist/app.js --name app8080 --watch -- --port 8080",
     "cluster": "pm2 start dist/app.js --name app8081 --watch -i max -- --port 8081"
   },
@@ -59,23 +60,30 @@
   "devDependencies": {
     "@types/autocannon": "^7.6.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.3",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.5",
     "@types/lodash": "^4.14.185",
     "@types/minimist": "^1.2.2",
+    "@types/mocha": "^9.1.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^18.7.13",
     "@types/nodemailer": "^6.4.5",
     "@types/passport": "^1.0.10",
     "@types/passport-local": "^1.0.34",
+    "@types/supertest": "^2.0.12",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
     "axios": "^0.27.2",
+    "chai": "^4.3.6",
     "eslint": "^8.22.0",
     "eslint-plugin-react": "^7.31.0",
+    "mocha": "^10.0.0",
+    "supertest": "^6.2.4",
+    "ts-mocha": "^10.0.0",
     "ts-node": "^10.9.1"
   }
 }
