--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "firebase": "^9.9.3",
+    "graphql": "^16.6.0",
     "image-type": "4.0.0",
     "knex": "^2.2.0",
     "lodash": "^4.17.21",
